# ekklesia-common

./: .git-blame-ignore-revs  .gitignore  README.md  babel.cfg  default.nix  dodo.py  flake.nix  makebabel.ipy  pyproject.toml  python_dev_env.nix  requirements.txt  setup.cfg  shell.nix  update_requirements.sh
cookiecutter/concept/: cookiecutter.json  generate.py
cookiecutter/concept/{{cookiecutter.concept_name}}/: {{cookiecutter.concept_names}}.py  {{cookiecutter.concept_name}}_cells.py  {{cookiecutter.concept_name}}_contracts.py  {{cookiecutter.concept_name}}_views.py
cookiecutter/concept/{{cookiecutter.concept_name}}/templates/: new_{{cookiecutter.concept_name}}.j2.jade
cookiecutter/concept/{{cookiecutter.concept_name}}/tests/{{cookiecutter.concept_name}}/: test_{{cookiecutter.concept_names}}.py
nix/: deps.nix  gunicorn_config.py.nix  install_requirements.nix  install_requirements_frozen.txt  install_requirements_override.nix  javascript_deps.nix  serve_app.nix  serve_static.nix  sources.json  static_files.nix  test_requirements.nix  test_requirements_frozen.txt  test_requirements_override.nix  version.nix
python_requirements/: test_requirements.txt
src/ekklesia_common/: VERSION  __init__.py  app.py  babel.py  cell.py  cell_app.py  concept.py  contract.py  database.py  datamodel.py  default_settings.py  ekklesia_auth.py  enums.py  errors.py  generate_concept.py  identity_policy.py  lid.py  logging.py  md.py  permission.py  psycopg2_debug.py  request.py  runserver.py  templating.py  testing.py  translation.py  utils.py
src/ekklesia_common/concepts/ekklesia_common/: __init__.py
src/ekklesia_common/concepts/ekklesia_common/cell/: index.py  layout.py  page_test.py
src/ekklesia_common/concepts/ekklesia_common/templates/: index.j2.jade  layout.j2.jade  page_test.j2.jade
src/ekklesia_common/concepts/ekklesia_common/view/: index.py  page_test.py
src/ekklesia_common/cookiecutter/concept/hooks/: post_gen_project.py
src/ekklesia_common/cookiecutter/concept/{{cookiecutter.concept_name}}/: __init__.{{"py"}}  {{cookiecutter.concept_name}}_cells.{{"py"}}  {{cookiecutter.concept_name}}_views.{{"py"}}
src/ekklesia_common/cookiecutter/concept/{{cookiecutter.concept_name}}/templates/: edit_{{cookiecutter.concept_name}}.j2.jade  {{cookiecutter.concept_names}}.j2.jade  {{cookiecutter.concept_name}}.j2.jade
src/ekklesia_common/cookiecutter/concept/{{cookiecutter.concept_name}}/tests/{{cookiecutter.concept_name}}/: test_{{cookiecutter.concept_names}}.{{"py"}}
src/ekklesia_common/debug/: tbtools.py
src/ekklesia_common/debug/static/: style.css
src/ekklesia_common/translations/de/LC_MESSAGES/: messages.po
src/ekklesia_common/translations/en/LC_MESSAGES/: messages.po
tests/: fixtures.py  test_babel.py  test_cell.py  test_cell_app.py  test_contract.py  test_ekklesia_auth.py  test_lid.py  test_md.py  test_templating.py
tests/templates/: test.j2.jade
