[tool.poetry]
name = "ekklesia-common"
version = "21.05.0"
description = "Common code for the Ekklesia e-democracy platform"
readme = "README.md"
keywords = ["ekklesia", "edemocracy", "evoting", "participation"]
license = "AGPL-3.0-or-later"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
"more.babel_i18n" = "^20.5.0"
"more.browser_session" = "^19.8.0"
"more.forwarded" = "^0.2"
"more.transaction" = "^0.9"
"zope.sqlalchemy" = "^1.3"
base32-crockford = "^0.3.0"
case-conversion = "^2.1.0"
cookiecutter = "^1.7.2"
coverage = {extras = ["toml"], version = "^5.2.1"}
deform = "^2.0.8"
eliot = "^1.12.0"
eliot-tree = "^19.0.1"
freezegun = "^0.3.15"
inflection = "^0.5.0"
morepath = "^0.19"
munch = "^2.5.0"
pdbpp = "^0.10.2"
py-gfm = "^0.1.4"
pyjade = "^4.0.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
python = "^3.8"
pyyaml = "^5.3.1"
requests_oauthlib = "^1.3.0"
responses = "^0.10.15"
sqlalchemy = "<1.4"
sqlalchemy_utils = "^0.36.6"
webtest = "^2.0.35"
pytest-instafail = "^0.4.2"
pytest-pspec = "^0.0.4"

[tool.poetry.scripts]
ekklesia-generate-concept = 'ekklesia_common.generate_concept:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
