[tool.poetry]
name = "ekklesia-common"
version = "22.02.0"
description = "Common code for the Ekklesia e-democracy platform"
readme = "README.md"
keywords = ["ekklesia", "edemocracy", "evoting", "participation"]
license = "AGPL-3.0-or-later"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
"more.babel_i18n" = "^20.5.0"
"more.forwarded" = "^0.2"
"more.transaction" = "^0.9"
"zope.sqlalchemy" = "^1.3"
base32-crockford = "^0.3.0"
case-conversion = "^2.1.0"
cookiecutter = "^2.1.1"
coverage = {extras = ["toml"], version = "^6.4.2"}
deform = "^2.0.8"
eliot = "^1.12.0"
eliot-tree = "^19.0.1"
freezegun = "^0.3.15"
inflection = "^0.5.0"
jinja2 = "<3.1"
morepath = "^0.19"
munch = "^2.5.0"
pdbpp = "^0.10.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
python = "^3.9"
pyyaml = "^5.3.1"
requests_oauthlib = "^1.3.0"
responses = "^0.10.15"
sqlalchemy = "^1.4"
sqlalchemy_utils = "^0.37"
pytest-instafail = "^0.4.2"
pytest-pspec = "^0.0.4"
psycopg2 = "^2.9.1"
better-exceptions = "^0.3.3"
py-gfm = "^1.0.2"
WebTest = "^3.0.0"
pypugjs = "^5.9.11"
"more.browser-session" = "^22.5.1"
Markdown = "3.3.7"

[tool.coverage.report]
skip_covered = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]


[tool.coverage.run]
source = [
    "ekklesia_common"
]
omit = [
    "src/ekklesia_common/debug/tbtools.py"
]


[tool.poetry.scripts]
ekklesia-generate-concept = 'ekklesia_common.generate_concept:main'


[tool.pytest.ini_options]
addopts = """\
  --show-capture=no \
  -ra \
  --tb=short \
  -k "not integration" \
  --strict-markers \
"""
filterwarnings = [
    "ignore::DeprecationWarning"
]
norecursedirs = "tests/helpers"
testpaths = "tests"
markers = [
    "integration: An Integration test which is allowed to modify the test database."
]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
